# lora_gateway

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README  compile_libloragw.sh  readme.md  reset_lgw.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: compile-docker.yml
cmake/: loragw-config.cmake
fpga/: SX1301_FPGA_200K_NOTCH_LBT_SPECTRAL_SCAN_863_v33.hex  SX1301_FPGA_200K_NOTCH_LBT_SPECTRAL_SCAN_915_v33.hex  SX1301_FPGA_NOTCH_PROG_SPECTRAL_SCAN_v31.hex  readme.md
libloragw/: CMakeLists.txt  Makefile  README  README.TXT  VERSION  install_ftdi.txt  library.cfg  loragw.pc.in  loragw_config.h.in  readme.md  test_loragw_cal  test_loragw_gps  test_loragw_hal  test_loragw_reg  test_loragw_spi
libloragw/doc/: CHANGELOG.TXT  INSTALL_FTDI.TXT  LICENSE.TXT  MANUAL.TXT
libloragw/inc/: config.h  loragw_aux.h  loragw_fpga.h  loragw_gpio.h  loragw_gps.h  loragw_hal.h  loragw_lbt.h  loragw_radio.h  loragw_reg.h  loragw_spi.h
libloragw/src/: agc_fw.var  arb_fw.var  cal_fw.var  loragw_aux.c  loragw_fpga.c  loragw_gpio.native.c  loragw_gps.c  loragw_hal.c  loragw_lbt.c  loragw_radio.c  loragw_reg.c  loragw_spi.ftdi.c  loragw_spi.native.c
libloragw/tst/: test_loragw_cal.c  test_loragw_gps.c  test_loragw_hal.c  test_loragw_reg.c  test_loragw_spi.c
loragw_band_survey/: LICENSE.TXT  Makefile  README  README.TXT
loragw_band_survey/src/: loragw_band_survey.c  rssi_fw.var
loragw_hal/: 99-libftdi.rules  Makefile  README  README.txt
loragw_hal/inc/: loragw_aux.h  loragw_hal.h  loragw_reg.h  loragw_spi.h
loragw_hal/src/: agc_fw.var  arb_fw.var  loragw_aux.c  loragw_hal.c  loragw_reg.c  loragw_spi.c
loragw_hal/test/: test_loragw_hal.c  test_loragw_reg.c  test_loragw_spi.c
loragw_pkt_logger/: LICENSE.TXT  Makefile  README.TXT  global_conf.json
loragw_pkt_logger/src/: loragw_pkt_logger.c
loragw_spi_stress/: Makefile  README  README.TXT
loragw_spi_stress/src/: loragw_spi_stress.c
loragw_tx_test/: Makefile  README.TXT
loragw_tx_test/src/: loragw_tx_test.c
util_band_survey/: Makefile  readme.md
util_band_survey/src/: rssi_fw.var  util_band_survey.c
util_lbt_test/: CMakeLists.txt  Makefile  readme.md
util_lbt_test/src/: util_lbt_test.c
util_pkt_logger/: CMakeLists.txt  Makefile  global_conf.json  local_conf.json  readme.md
util_pkt_logger/cfg/: global_conf.cn470.json  global_conf.empty.json  global_conf.eu433.json  global_conf.eu868.json  global_conf.us915.json
util_pkt_logger/src/: util_pkt_logger.c
util_spectral_scan/: CMakeLists.txt  Makefile  readme.md
util_spectral_scan/inc/: loragw_fpga_aux.h  loragw_fpga_reg.h  loragw_fpga_spi.h
util_spectral_scan/src/: loragw_fpga_aux.c  loragw_fpga_reg.c  loragw_fpga_spi.c  util_spectral_scan.c
util_spi_stress/: CMakeLists.txt  Makefile  readme.md
util_spi_stress/src/: util_spi_stress.c
util_tx_continuous/: CMakeLists.txt  Makefile  readme.md
util_tx_continuous/src/: cal_tx_fw.var  util_fw.var  util_tx_continuous.c
util_tx_test/: CMakeLists.txt  Makefile  readme.md
util_tx_test/src/: util_tx_test.c
